--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,9 @@
 NODE_ENV=development
-NODE_ENV=production
+// NODE_ENV=production
 
 JWT_EXPIRES=3600
 JWT_SECRET=luuhongdongmy19122002
+
+DB_STRING='mongodb+srv://huynhhothoty:kuQRfdSzC3RllSpT@bootcampdb.ak789bd.mongodb.net/mybcdatabase?retryWrites=true&w=majority&appName=AtlasApp'
+DB_NAME=huynhhothoty
+DB_PASS=kuQRfdSzC3RllSpT
