--- a/Server/package.json
+++ b/Server/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
