bootcamp, subject, major
full, except stats

--- a/Server/.env
+++ b/Server/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 // NODE_ENV=production
 
-JWT_EXPIRES=3600
+JWT_EXPIRES='3d'
 JWT_SECRET=luuhongdongmy19122002
 
 DB_STRING='mongodb+srv://huynhhothoty:kuQRfdSzC3RllSpT@bootcampdb.ak789bd.mongodb.net/mybcdatabase?retryWrites=true&w=majority&appName=AtlasApp'
