--- a/Client/package.json
+++ b/Client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "sass": "^1.69.0"
   },
