--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
