--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.6.31",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
