--- a/Server/package.json
+++ b/Server/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "googleapis": "^126.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2",
-    "nodemailer": "^6.9.5",
-    "validator": "^13.11.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon src/server.js",
+        "start": "node src/server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "googleapis": "^126.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.1.0",
+        "mongoose": "^7.5.2",
+        "nodemailer": "^6.9.5",
+        "validator": "^13.11.0"
+    },
+    "devDependencies": {
+        "dotenv": "^16.3.1",
+        "nodemon": "^3.0.1"
+    }
 }
