--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
+        "deep-diff": "^1.0.2",
         "exceljs": "^4.4.0",
         "express": "^4.18.2",
         "googleapis": "^126.0.1",
