--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,7 @@
 NODE_ENV=development
 // NODE_ENV=production
+PORT=3000
+FE_LINK='https://bootcampmanagement-cbe17.web.app'
 
 JWT_EXPIRES='3d'
 JWT_SECRET=luuhongdongmy19122002
