--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,12 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: cd ./Client
+
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+      - run: cd Client && npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
+          working-directory: ./Client
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOOTCAMPMANAGEMENT_CBE17 }}
           channelId: live
