--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "react-highlight-words": "^0.20.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-scroll-sync": "^0.11.2",
     "sass": "^1.69.0"
   },
   "devDependencies": {
